[project]
name = "crawl_mcp"
version = "0.1.0"
description = "基于 crawl4ai 的 MCP 服务器，提供单页、整站、批量网页爬取功能"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "crawl4ai>=0.7.8",
    "lxml>=5.4.0",
    "fastmcp>=0.1.0",
    "nest-asyncio>=1.6.0",
]

[project.scripts]
crawl4ai = "main:main"

[project.entry-points."mcp.servers"]
crawl-mcp = "crawl4ai_mcp.fastmcp_server:mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crawl4ai_mcp"]

[dependency-groups]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]
